# github-manager-cli

./: .env.example  .gitignore  .pylintrc  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  MANIFEST.in  README.md  Taskfile.yaml  VISON.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: CODEOWNERS  pull_request_template.md  renovate.json5
.github/workflows/: call-create-tag.yaml  ci-renovate-private.yaml  python-package.yml.disabled
config/: repositories.yaml  repositories_decom_list.yaml  repositories_delete.yaml
docker/: Dockerfile  Dockerfile.dev
requirements/: docs.txt  main.txt  test.txt
scr/: cli.py  repository.py
scripts/: lint.py
src/: _init_.py  cli.py  display.py  main.py  notifications.py  repository.py
src/ghrm/: __init__.py  __main__.py  __version__.py  cli.py  display.py  repository.py
src/ghrm/notifications/: __init__.py  slack.py
src/notifications/: discord.py  slack.py
tests/: test_cli.py  test_conf.py  test_repository.py
